# aoc2024-py

./: .env  Dockerfile-py  pyproject.toml
day01/: main.py
day02/: main.py
day03/: main.py
day04/: main.py
